syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

// final case class WorkflowIdentity (
//    executionId: Long
// )
message WorkflowIdentity {
  int64 executionId = 1;
}

// final case class ActorVirtualIdentity (
//    name: String
// )
message ActorVirtualIdentity {
  string name = 1;
}

// final case class OperatorIdentity (
//    id: String
// )
message OperatorIdentity {
  string id = 1;
}

// final case class PhysicalOpIdentity (
//    logicalOpId: String,
//    layerName: String
// )
message PhysicalOpIdentity{
  OperatorIdentity logicalOpId = 1 [(scalapb.field).no_box = true];
  string layerName = 2;
}

// final case class PhysicalLinkIdentity (
//    from: PhysicalOpIdentity,
//    fromPort: Int,
//    to: PhysicalOpIdentity,
//    toPort: Int
// )
message PhysicalLinkIdentity {
  PhysicalOpIdentity from = 1 [(scalapb.field).no_box = true];
  int32 fromPort = 2;
  PhysicalOpIdentity to = 3 [(scalapb.field).no_box = true];
  int32 toPort = 4;
}



